[workspace]
resolver = "2"
# 
members = ["ext", "s3tool"]

[workspace.dependencies]
# cashu-wallet = {path = "../cashu-wallet-rs/cashu-wallet"}
cashu-wallet = {git = "https://github.com/keychat-io/cashu-wallet-rs.git", tag = "241227"}
cashu-wallet-sqlite = {git = "https://github.com/keychat-io/cashu-wallet-rs.git", tag = "241227"}
#
flume = "0.11"
futures = "0.3"
tokio = {version = "1.34", features = ["macros", "sync", "rt-multi-thread"]}
# 
dotenvy = "0.15.7"
# rust-s3 = { version = "0.34.0", default-features = false, features = ["tags", "tokio-rustls-tls", "fail-on-err"] }
# aws-creds = { version = "0.36.0", default-features = false, features = ["rustls-tls"] }
rust-s3 = { version = "0.35.0-alpha.2", default-features = false, features = ["tags", "tokio-rustls-tls", "fail-on-err"], git = "https://github.com/durch/rust-s3" }
aws-creds = { version = "0.37.0", default-features = false, features = ["rustls-tls"] }
http = "0.2"
base64-simd = "0.8.0"
url="2"
#
anyhow = "1"
clap = {version = "3.1.8", features = ["derive"]}
faster-hex = "0.9.0"
serde = {version = "1", features = ["derive"]}
serde_json = "1"
toml = "0.8.8"
tracing = "0.1"
tracing-subscriber = "0.3"
