[package]
edition = "2021"
name = "keychat-relay-ext"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

# grpc authorization server
[[bin]]
name = "keychat-relay-gas"
path = "src/gas.rs"

# storage authorization server
[[bin]]
name = "keychat-relay-sas"
path = "src/sas.rs"

[build-dependencies]
tonic-build = {version = "0.10", features = ["prost"]}

[dependencies]
prost = "0.12"
tokio-stream = {version = "0.1.14", features = ["sync"]}
tonic = "0.10"
#
dashmap = "6.0.1"
parking_lot = "0.12"
axum = {version = "0.7.4", features = []}
tower-http = { version = "0.5.0", features = ["trace"] }
dotenvy.workspace = true
rust-s3.workspace = true
aws-creds.workspace = true
http.workspace = true
base64-simd.workspace = true
url.workspace = true
#
cashu-wallet.workspace = true
cashu-wallet-sqlite.workspace = true
flume.workspace = true
futures.workspace = true
tokio.workspace = true
#
anyhow.workspace = true
clap.workspace = true
faster-hex.workspace = true
serde.workspace = true
serde_json.workspace = true
toml.workspace = true
tracing-subscriber.workspace = true
tracing.workspace = true
